--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "ajv": "^8.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "uuid": "^11.1.0",
