--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^22.15.2",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "ajv": "^8.17.1",
     "axios": "^1.8.4",
     "react": "^19.1.0",
@@ -16,6 +19,7 @@
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "typescript": "^5.8.3",
     "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
